--- a/public/tuiter/explore/explore-css.html
+++ b/public/tuiter/explore/explore-css.html
@@ -2,29 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="index.css"
+    <link href="style.css"
         rel="stylesheet"/>
-    <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        rel="stylesheet"/>
 </head>
 <body>
-    <!-- <form id="search-bar">
-        <div class="input-icons">
-            <span class=""><i class="fa fa-cog"></i></span>
-            
-            <input class="input-feild rounded-corners-all-around" placeholder="Search Tuiter">
-            <i class="fa fa-cog"></i>
-        </div> -->
-        <!-- &#x1F50E;
-        <input class="rounded-corners-all-around fg-color-dark-grey
-            bg-color-light-grey input-feild" placeholder="Search Tuiter">
-        <i class="fa fa-cog"></i>          -->
-    <!-- </form> -->
-    <div>
-        <span><i class="fa fa-cog"></i></span>
-        <input class="rounded-corners-all-around" placeholder="Search Tuiter">
+    <div class="wd-search-bar">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <input class="wd-input-field" type="text" placeholder="Search Tuiter">
+        <i class="fa fa-cog wd-icon"></i>
     </div>
+    <div class="wd-tab">
+        <ul>
+            <li class="active">
+                <a href="#">
+                    <span>For you</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span>Trending</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span>News</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span>Sports</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span>Entertainment</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div class="wd-pic">
+        <img width="100%" height="500px" src="view.jpg">
+        <p class="wd-pic-text">The Great View</p>
+    </div>
+    <div class="wd-list">
+        <ul>
+            <li>Trending in News<i class="fa-solid fa-ellipsis"></i></li>
+            <li><span><b>Meghan</b></span></li>
+            <li>56.1K Tweets</li>
+            <br>
+            <li>Trending<i class="fa-solid fa-ellipsis"></i></li>
+            <li><span><b>Starlink</b></span></li>
+            <li>26.4K Tweets</li>
+            <br>
+            <li>Trending in Business personalities<i class="fa-solid fa-ellipsis"></i></li>
+            <li><span><b>Warrent Buffet</b></span></li>
+            <li>5,502 Tweets</li>
+            <br>
+            <li>Trending in Political figures<i class="fa-solid fa-ellipsis"></i></li>
+            <li><span><b>Poland</b></span></li>
+            <li>29.9K Tweets</li>
+            <br>
+            <li>Celebrates‧Trending<i class="fa-solid fa-ellipsis"></i></li>
+            <li><span><b>Starlink</b></span></li>
+            <li>26.4K Tweets</li>
+        </ul>
 
- 
+    </div>
 
 </body>
 </html>
