--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -10,7 +10,7 @@
         <a href="home.html">Home</a><br/>
     </li>
     <li>
-        <a href="explore.html">Explore</a><br/>
+        <a href="explore/index.html">Explore</a><br/>
     </li>
     <li>
         <a href="notifications.html">Notifications</a><br/>
