update public index link

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
     <li><a href="labs/a1/index.html">Assignment 1 Labs</a></li>
     <li><a href="tuiter/navigation.html">Tuiter</a></li>
     <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
+    <li><a href="tuiter/bookmarks/bookmarks-css.html">bookmarks-css</a></li>
+    <li><a href="tuiter/explore/explore-css.html">explore-css</a></li>
+    <li><a href="tuiter/explore/index.html">a2 CSS and Bootstrap</a></li>
     </ul>
   </body>
 </html>
