--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -95,7 +95,7 @@
                             <div class="col-xl-10 col-xxl-10 col-md-10 col-sm-9">
                                 <p>
                                     <span style="color: grey;">Web Development</span><br>
-                                    <span class="second"><b>ReactJS</b><i style="padding-left: 3px;" class="fa-solid fa-circle-check"></i> <span style="color: grey;">- 2h</span></span><br>
+                                    <span><b>ReactJS</b><i style="padding-left: 3px;" class="fa-solid fa-circle-check"></i> <span style="color: grey;">- 2h</span></span><br>
                                     <b>React.js is a component based front end library that makes it very easy to build Single Page Applications or SAPs</b>
                                 </p>
                                 
@@ -109,9 +109,9 @@
                         <div class="row">
                             <div class="col-xl-10 col-xxl-10 col-md-10 col-sm-9">
                                 <p>
-                                    <span class="second"><b>JavaScript</b><i style="padding-left: 3px;" class="fa-solid fa-circle-check"></i> <span style="color: grey;">- 2h</span></span><br>
+                                    <span><b>JavaScript</b><i style="padding-left: 3px;" class="fa-solid fa-circle-check"></i> <span style="color: grey;">- 2h</span></span><br>
                                     <b>JavaScript is programming language that can run on browsers as well as desktops</b><br>
-                                    <span class="first">123K Tweets</span>
+                                    <span style="color: grey;">123K Tweets</span>
                                 </p>
                                 
                             </div>
