d-lg-block right part

--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -150,7 +150,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-xl-4 col-xxl-3 col-lg-4 d-lg-none d-md-none d-sm-none d-xl-block d-xxl-block" id="right">
+            <div class="col-xl-4 col-xxl-3 col-lg-4 d-lg-none d-md-none d-sm-none d-lg-block d-xl-block d-xxl-block" id="right">
                 <ul class="list-group">
                     <li class="list-group-item">Who to know</li>
                     <li class="list-group-item">
