--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -20,7 +20,7 @@
     </span>
     <div style="float: left; padding-left: 10%;" class="container">
         <div class="row">
-            <div class="col-xl-2 col-xxl-2 col-lg-2 col-md-2 col-sm-2" id="left">
+            <div class="col-xl-2 col-xxl-2 col-lg-1 col-md-2 col-sm-2" id="left">
                 <div class="list-group">
                     <a href="../home.html" class="list-group-item list-group-item-action disabled">
                         <i class="fa-solid fa-dove"></i>
@@ -58,9 +58,11 @@
                         <span class="d-none d-xl-block adjust">More</span>
                     </a>
                     <br>
-                    <a class="btn btn-primary rounded-pill" href="#" role="button">Tweet</a>
-                    
                 </div>
+                <div style="z-index: 10;">
+                    <a class="btn btn-primary rounded-pill" href="#" role="button">Tweet</a>
+                </div>
+                
             </div>
             <div class="col-xl-6 col-xxl-5 col-lg-7 col-md-10 col-sm-10" id="mid">
                 <form>
@@ -150,75 +152,75 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-xl-4 col-xxl-3 col-lg-4 d-lg-none d-md-none d-sm-none d-lg-block d-xl-block d-xxl-block" id="right">
+            <div class="col-xl-4 col-xxl-3 col-lg-4 d-none d-lg-block" id="right">
                 <ul class="list-group">
                     <li class="list-group-item">Who to know</li>
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xl-2">
+                            <div class="col-xl-2 col-lg-2">
                                 <img class="rounded-circle first" src="java.png" width="48px" height="48px">
                             </div>
-                            <div class="col-xl-8">
+                            <div class="col-xl-8 col-lg-8" style="z-index: 10;">
                                 <span style="float: left;"><b>Java</b> <i class="fa-solid fa-circle-check"></i></span><br>
                                 <span style="color: grey;">@Java</span>
                             </div>
-                            <div class="col-xl-2">
+                            <div class="col-xl-2 col-lg-2">
                                 <button type="button" class="btn btn-primary rounded-pill">Follow</button>
                             </div>
                         </div>
                     </li>
-                    <li class="list-group-item adjust">
+                    <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xl-2">
-                                <img class="rounded-circle first" src="relativity.jpg" width="48px" height="48px">
+                            <div class="col-xl-2 col-lg-2">
+                                <img class="rounded-circle" src="relativity.jpg" width="48px" height="48px">
                             </div>
-                            <div class="col-xl-8">
-                                <span class="first-row"><b>Relativity Space</b> <i class="fa-solid fa-circle-check"></i></span><br>
+                            <div class="col-xl-8 col-lg-8"  style="z-index: 10;">
+                                <span><b>Relativity Space</b> <i style="z-index: 1;"class="fa-solid fa-circle-check"></i></span><br>
                                 <span style="color: grey;">@relativityspace</span>
                             </div>
-                            <div class="col-xl-2">
-                                <button type="button" class="btn btn-primary rounded-pill size">Follow</button>
+                            <div class="col-xl-2 col-lg-2">
+                                <button type="button" class="btn btn-primary rounded-pill">Follow</button>
                             </div>
                         </div>
                     </li>
-                    <li class="list-group-item adjust">
+                    <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xl-2">
-                                <img class="rounded-circle first" src="virgin.png" width="48px" height="48px">
+                            <div class="col-xl-2 col-lg-2">
+                                <img class="rounded-circle" src="virgin.png" width="48px" height="48px">
                             </div>
-                            <div class="col-xl-8">
-                                <span class="first-row"><b>Virgin Galactic</b> <i class="fa-solid fa-circle-check"></i></span><br>
+                            <div class="col-xl-8 col-lg-8" style="z-index: 10;">
+                                <span><b>Virgin Galactic</b> <i class="fa-solid fa-circle-check"></i></span><br>
                                 <span style="color: grey;">@virgingalactic</span>
                             </div>
-                            <div class="col-xl-2">
+                            <div class="col-xl-2 col-lg-2">
                                 <button type="button" class="btn btn-primary rounded-pill size">Follow</button>
                             </div>
                         </div>
                     </li>
-                    <li class="list-group-item adjust">
+                    <li class="list-group-item">
                         <div class="row">
-                            <div class="col-xl-2">
-                                <img class="rounded-circle first" src="nasa.png" width="48px" height="48px">
+                            <div class="col-xl-2 col-lg-2">
+                                <img class="rounded-circle" src="nasa.png" width="48px" height="48px">
                             </div>
-                            <div class="col-xl-8">
-                                <span class="first-row"><b>NASA</b> <i class="fa-solid fa-circle-check"></i></span><br>
+                            <div class="col-xl-8 col-lg-8" style="z-index: 10;">
+                                <span><b>NASA</b> <i class="fa-solid fa-circle-check"></i></span><br>
                                 <span style="color: grey;">@NASA</span>
                             </div>
-                            <div class="col-xl-2">
+                            <div class="col-xl-2 col-lg-2">
                                 <button type="button" class="btn btn-primary rounded-pill size">Follow</button>
                             </div>
                         </div>
                     </li>
-                    <li class="list-group-item adjust">
+                    <li class="list-group-item">
                         <div class="row">
-                            <div class="col-2">
-                                <img class="rounded-circle first" src="tesla.png" width="48px" height="48px">
+                            <div class="col-xl-2 col-lg-2">
+                                <img class="rounded-circle" src="tesla.png" width="48px" height="48px">
                             </div>
-                            <div class="col-5">
-                                <span class="first-row"><b>Tesla</b> <i class="fa-solid fa-circle-check"></i></span><br>
+                            <div class="col-xl-8 col-lg-8" style="z-index: 10;">
+                                <span><b>Tesla</b> <i class="fa-solid fa-circle-check"></i></span><br>
                                 <span style="color: grey;">@Tesla</span>
                             </div>
-                            <div class="col">
+                            <div class="col-xl-2 col-lg-2">
                                 <button type="button" class="btn btn-primary rounded-pill size">Follow</button>
                             </div>
                         </div>
