--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>React App</title>
   </head>
   <body>
-    <h1>Web Dev Assignments</h1>
+    <!-- <h1>Web Dev Assignments</h1>
     <ul>
     <li><a href="labs/a1/index.html">Assignment 1 Labs</a></li>
     <li><a href="tuiter/navigation.html">Tuiter</a></li>
@@ -35,6 +35,7 @@
     <li><a href="tuiter/bookmarks/bookmarks-css.html">bookmarks-css</a></li>
     <li><a href="tuiter/explore/explore-css.html">explore-css</a></li>
     <li><a href="tuiter/explore/index.html">a2 CSS and Bootstrap</a></li>
-    </ul>
+    </ul> -->
+    <div id="root"></div>
   </body>
 </html>
